web/src/components/project.module.css
@import '../styles/media-queries.css';
@import '../styles/vars.css';

.root {
  position: relative;
}
.container {
  margin-top: 85vh;
  @media screen and (orientation: portrait) {
    margin-top: 75vw;
  }
}

.imageWrapper {
  position: fixed;
  top: calc(var(--burger-size) / 6 * 5 + var(--burger-size) * 2);
  width: 100vw;
  height: 85vh;
  @media screen and (orientation: portrait) {
    height: 40vh;
  }
  z-index: -120;
}

/* .innerImageWrapper {
  transition: all 0.1s ease;
} */

.categoryLink {
  position: -webkit-sticky;
  position: fixed;
  top: var(--burger-size);
  z-index: 200;
  padding: 0 1em;
  color: var(--color-main-dark);
  width: 100vw;
  opacity: 0.7;
  text-decoration: none;
  transition: var(--transition-short);

  @media screen and (max-width: 750px) {
    display: none;
    opacity: 0;
  }

  @media screen and (orientation: portrait) {
    display: none;
    opacity: 0;
  }
}

.categoryLink:hover {
  color: var(--color-accent-dark);
}

.title {
  /* z-index: 200;
  position: -webkit-sticky;
  position: sticky;
  top: calc(var(--burger-size) / 6 * 5 + var(--burger-size) * 2); */
  color: var(--color-brand);
  opacity: 0.65;
  margin: 0.25em 0;
  transition: var(--transition-short);
  @media screen and (hover: hover) {
    @nest &:hover {
      opacity: 1;
    }
  }
}

.grid {
  position: relative;
  display: grid;
  grid-template-columns: 1fr;
  grid-column-gap: 2em;

  @media (--media-min-medium) {
    grid-template-columns: 3fr 1fr;
  }
}

.mainContent {
  @nest & a {
    color: var(--color-accent);

    @media (hover: hover) {
      @nest &:hover {
        color: inherit;
      }
    }
  }
  @nest & p, h1, h2, h3, h4 {
    opacity: 0.75;
  }
}

.metaContent {
}

.publishedAt {
  composes: small from './typography.module.css';
  margin: 1.5rem 0 3rem;
}

.categories {
  border-top: 1px solid var(--color-main-dark);
  margin: 2rem 0 3rem;

  @nest & ul {
    list-style: none;
    margin: 0.75rem 0;
    padding: 0;
  }

  @nest & ul li {
    padding: 0.25rem 0;
  }
}

.categoriesHeadline {
  composes: base from './typography.module.css';
  margin: 0.5rem 0 0;
}

.relatedProjects {
  border-top: 1px solid var(--color-main-dark);
  margin: 2rem 0 3rem;

  @nest & ul {
    list-style: none;
    margin: 0.75rem 0;
    padding: 0;
  }

  @nest & a {
    display: inline-block;
    color: inherit;
    text-decoration: none;
    padding: 0.25rem 0;
  }
}

.relatedProjectsHeadline {
  composes: base from './typography.module.css';
  margin: 0.5rem 0 0;
}

.backgroundOverlay {
  position: absolute;
  top: 0;
  min-height: 100vh;
  height: 100%;
  width: 100vw;
  background: var(--color-main-light);
  /* background: radial-gradient(circle at top, transparent 15%, var(--color-main-light) 40%); */
  /* transition: all 0.0167s linear; */
  z-index: 0;
}

